--- a/Delaunay/analysis_data/generate_source_points.ipynb
+++ b/Delaunay/analysis_data/generate_source_points.ipynb
@@ -85,40 +85,15 @@
    "source": [
     "# original masks\n",
     "\n",
-    "if mask_type == 'original_masks':\n",
+    "if mask_type == 'large_masks':\n",
     "    likemask = fu.makemask(array200sci,30./cnk,60./cnk,0.8)\n",
     "    likemask2 = fu.makemask(array200sci2,30./cnk,60./cnk,1.7)\n",
     "    likemask3 = fu.makemask(array200sci3,30./cnk,60./cnk,0.5)\n",
     "    \n",
-    "if mask_type == 'circular_masks':\n",
-    "    likemask = fu.makemask(array200sci,15./cnk,15./cnk,0.8)\n",
-    "    likemask2 = fu.makemask(array200sci2,15/cnk,15./cnk,1.7)\n",
-    "    likemask3 = fu.makemask(array200sci3,15./cnk,15./cnk,0.5)\n",
-    "    \n",
     "elif mask_type == 'small_masks':\n",
     "    likemask = fu.makemask(array200sci,15./cnk,50./cnk,0.8)\n",
     "    likemask2 = fu.makemask(array200sci2,15/cnk,50./cnk,1.7)\n",
-    "    likemask3 = fu.makemask(array200sci3,15./cnk,50./cnk,0.5)\n",
-    "    \n",
-    "elif mask_type == 'chandrika/small_masks':\n",
-    "    likemask = fu.makemask(array200sci,20./cnk,50./cnk,0.8)\n",
-    "    likemask2 = fu.makemask(array200sci2,20/cnk,50./cnk,1.7)\n",
-    "    likemask3 = fu.makemask(array200sci3,20./cnk,50./cnk,0.5)\n",
-    "\n",
-    "elif mask_type == 'chandrika/large_masks':\n",
-    "    likemask = fu.makemask(array200sci,60./cnk,80./cnk,0.8)\n",
-    "    likemask2 = fu.makemask(array200sci2,30/cnk,80./cnk,1.7)\n",
-    "    likemask3 = fu.makemask(array200sci3,60./cnk,80./cnk,0.5) \n",
-    "\n",
-    "elif mask_type == 'cropped':\n",
-    "    likemask = fu.makemask(array200sci,12./cnk,30./cnk,0.8)\n",
-    "    likemask2 = fu.makemask(array200sci2,12/cnk,35./cnk,1.7)\n",
-    "    likemask3 = fu.makemask(array200sci3,12./cnk,40./cnk,0.5)\n",
-    "    \n",
-    "elif mask_type == 'smallest_masks':\n",
-    "    likemask = fu.makemask(array200sci,10./cnk,30./cnk,0.8)\n",
-    "    likemask2 = fu.makemask(array200sci2,10/cnk,35./cnk,1.7)\n",
-    "    likemask3 = fu.makemask(array200sci3,10./cnk,40./cnk,0.5)"
+    "    likemask3 = fu.makemask(array200sci3,15./cnk,50./cnk,0.5)\n"
    ]
   },
   {
